--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,11 @@ github_username: jekyll
 # Build settings
 markdown: kramdown
 theme: minima
+plugins_dir: ./_plugins
+jekyll_get:
+  - data: github
+    json: "https://api.github.com/users/UAce/repos"
+    cache: false
 plugins:
   - jekyll-feed
 # Exclude from processing.
