--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,17 @@
 title: Your awesome title
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+permalink: pretty
+description: Yu-Yueh Liu's personal website as a summer project.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: https://uace.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username: jekyll
+github_username: UAce
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM
 theme: minima
 plugins_dir: ./_plugins
 jekyll_get:
@@ -19,14 +20,13 @@ jekyll_get:
     cache: false
 plugins:
   - jekyll-feed
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+
+# Exclude from processing
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - README
