Add styling to particles.js

--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,7 @@ social_links:
 
 # canvas titles
 canvas:
-  index: Welcome!
-  resume: Find Out More.
+  resume: Find Out About My Experiences.
   about: My Passions & Interests.
 
 # Exclude from processing
