Add resume and styling

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social_links:
 
 # canvas titles
 canvas:
-  resume: Find Out About My Experiences.
+  resume: Find Out More.
   about: My Passions & Interests.
 
 # Exclude from processing
