Rename blog to articles, add grid-list views to articles, update resume

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: UAce.github.io
+title: Yu-Yueh Liu
 permalink: pretty
 description: My personal website - Just a summer project.
 baseurl: "" # the subpath of your site, e.g. /blog
