--- a/_data/technologies.yml
+++ b/_data/technologies.yml
@@ -3,7 +3,7 @@
     - JavaScript
     - Python
     - Java
-    - HTML5 / CSS3
+    - HTML5 / CSS3 / SASS
     - GIT Version Control
     - Windows / Linux
 - name: Experience with
