remove line height and fix padding

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Yu-Yueh Liu
 permalink: pretty
 description: Yueh's personal website created with Jekyll and hosted on GitHub. It uses HTML5, SASS, Bootstrap 4, JavaScript and JQuery.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://uace.github.io/
+url: https://uace.github.io
 github_username: UAce
 
 # Build settings
