Add images, use fancybox for interactive images

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
-- Yu-Yueh Liu © 2020
+- © 2020 Yu-Yueh Liu
 - <a href="https://www.youtube.com/watch?v=XvR-kTUad6U" target="_blank">Plus Ultra</a>
 - <a href="feed.xml">RSS <i class="fas fa-rss"></i></a>
 - <a href="sitemap.xml">Sitemap</a>
