Add card element for article

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ social_links:
 # canvas titles
 canvas:
   home: Welcome
+  articles: What's new?
   resume: Find Out More
   about: My Passions & Interests
 
