--- a/_data/about.yml
+++ b/_data/about.yml
@@ -5,4 +5,4 @@
 - Needs to make puns 24/7 🤣
 - Can dance 🕺 and play violin 🎻
 - Is a local guide on Google Maps 🍽
-- Red is the best colour 🔴 change my mind
+- Red is the best colour. Change my mind 🙉
