--- a/_data/quotes.yml
+++ b/_data/quotes.yml
@@ -45,7 +45,7 @@
   author: Celine Dion
 - quote: |
     Life is never easy. There is work to be done and obligations to be met – obligations to truth, to justice, and to liberty.
-  author: John F. Kennedy (JFK Quotes)
+  author: John F. Kennedy
 - quote: |
     Live for each second without hesitation.
   author: Elton John
@@ -63,7 +63,7 @@
   author: Steve Jobs
 - quote: |
     My mama always said, life is like a box of chocolates. You never know what you’re gonna get.
-  author: Forrest Gump (Forrest Gump Quotes)
+  author: Forrest Gump
 - quote: |
     Watch your thoughts; they become words. Watch your words; they become actions. Watch your actions; they become habits. Watch your habits; they become character. Watch your character; it becomes your destiny.
   author: Lao-Tze
@@ -249,7 +249,7 @@
   author: George Bernard Shaw
 - quote: |
     Just disconnect. Once in a day sometime, sit silently and from all connections disconnect yourself.
-  author: Yoda (Star Wars Quotes)
+  author: Yoda
 - quote: |
     Be where you are; otherwise you will miss your life.
   author: Buddha
@@ -414,7 +414,7 @@
   author: Stephen Curry
 - quote: |
     Today, you have 100% of your life left.
-  author: Tom Landry (Football Quotes)
+  author: Tom Landry
 - quote: |
     Nobody who ever gave his best regretted it.
   author: George Halas
