--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,4 @@
 - © 2020 Yu-Yueh Liu
 - <a href="https://www.youtube.com/watch?v=XvR-kTUad6U" target="_blank">Plus Ultra</a>
-- <a href="feed.xml">RSS <i class="fas fa-rss"></i></a>
-- <a href="sitemap.xml">Sitemap</a>
+- <a href="feed.xml" data-proofer-ignore>RSS <i class="fas fa-rss"></i></a>
+- <a href="sitemap.xml" data-proofer-ignore>Sitemap</a>
