update work experience

--- a/_data/work_experiences.yml
+++ b/_data/work_experiences.yml
@@ -4,7 +4,7 @@
   url: https://ormuco.com/
   location: Montreal, CA
   period: January 2020 – Present
-  description: ...
+  description: Working on a different project where I learned ReactJS and TypeScript. Setup CI/CD pipeline in GitLab with Kubernetes deployment integration.
 - title: Full Stack Developer Intern
   company: Ormuco Inc.
   image: company/ormuco-logo.png
