--- a/_data/technologies.yml
+++ b/_data/technologies.yml
@@ -1,6 +1,6 @@
 - name: Comfortable with
   list:
-    - JavaScript
+    - JavaScript / TypeScript
     - Python
     - Java
     - HTML5 / CSS3 / SASS
@@ -8,13 +8,12 @@
     - Windows / Linux
 - name: Experience with
   list:
-    - TypeScript
     - C / C++
     - Bash
     - SQL
     - Full Stack Development (AngularJS / Flask / Jinja2, ReactJS / NodeJS)
     - Native Android Development
-    - CI/CD (Jenkins, TravisCI, Gitlab)
+    - CI/CD (Jenkins, TravisCI, GitLab)
     - Docker
     - Kubernetes
     - OpenStack
