--- a/_data/work_experiences.yml
+++ b/_data/work_experiences.yml
@@ -4,30 +4,30 @@
   url: https://ormuco.com/
   location: Montreal, CA
   period: January 2020 – Present
-  description: Worked on two additional projects where I learned ReactJS, NodeJS and TypeScript. Setup CI/CD pipeline in GitLab with Kubernetes deployment integration.
+  description: Worked on the frontend and backend in two other projects where I learned ReactJS, NodeJS and TypeScript. Setup CI/CD pipeline in GitLab with Kubernetes deployment integration.
 - title: Full Stack Developer Intern
   company: Ormuco Inc.
   image: company/ormuco-logo.png
   url: https://ormuco.com/
   location: Montreal, CA
   period: February 2019 – December 2019
-  description: Worked in a fast-paced environment with passionate developers to develop and maintain Ormuco's IaaS platform. Enhanced my JavaScript skills and learned AngularJS through this experience. Worked to improve the Ormuco Iaas platform UI, to improve existing features and to add new features to the platform such as Workflow as a Service (OpenStack Mistral). Worked largely with OpenStack products and performed QA/UAT testing.
+  description: Worked in a fast-paced environment with passionate developers to develop and maintain Ormuco's IaaS platform. Enhanced my JavaScript skills and learned AngularJS, Flask, Jinja2 and SASS through this experience. Worked to improve the Ormuco Iaas platform UI, to improve existing features and to add new features to the platform such as Workflow as a Service (OpenStack Mistral). Worked largely with OpenStack products and performed QA/UAT testing.
 - title: System Administrator DevOps Intern
-  company: Broadsign
+  company: Broadsign International Inc.
   image: company/broadsign-logo.png
   url: https://broadsign.com/
   location: Montreal, CA
   period: September 2018 – April 2019
-  description: Researched and created a proof of concept for centralized logging management solutions using AWS CloudWatch. Implemented functionality to dynamically create CloudWatch agent configuration files per internal team using ERB templates into existing Chef cookbooks. Wrote Terraform and Cloudformation scripts to provision AWS resources.
+  description: Investigated different logs aggregation/processing tools and created a proof of concept for centralized logging management solution using AWS CloudWatch. Implemented functionality to dynamically create CloudWatch agent configuration files per environment and projects using ERB templates and Chef. Wrote Terraform and Cloudformation scripts to provision AWS resources.
 - title: Software Developer DevOps Intern
   company: Ericsson Canada Inc.
   image: company/ericsson-logo.png
   url: https://www.ericsson.ca/en
   location: Montreal, CA
   period: January 2018 – April 2018
-  description: Provisioned virtual machines for testing purposes with Ansible. Created and set up Docker containers for functional testings. Wrote Jenkins 2 declarative pipeline scripts (groovy) to automate builds and deployments. Wrote bash scripts to automate the generation of daily reports for the overnight load test results and publish them on Discousrse via their API.
+  description: Provisioned virtual machines in staging environment with Ansible. Created and set up Docker containers for functional tests. Wrote Jenkins 2 declarative pipeline scripts (groovy) to automate builds and deployments. Wrote bash scripts to automate the generation of daily reports for the overnight load test results and publish them on Discousrse via their API.
 - title: Software Engineering Intern
-  company: Bombardier Transportation
+  company: Bombardier Transportation Canada Inc.
   image: company/bombardier-transportation-logo.png
   url: https://www.bombardier.com/en/transportation.html
   location: Montreal, CA
