update chrome extension post and add line numbers to code block

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ markdown: kramdown
 highlighter: rouge
 kramdown:
   input: GFM
+  syntax_highlighter_opts:
+    default_lang: html
+    css_class: "syntax"
 
 plugins_dir: ./_plugins
 plugins:
