--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,8 +1,8 @@
-- Likes traveling ✈
-- Can't live without rice 🍚
-- Can speak 4 languages 💬
-- Gets a haircut twice a year 💈
-- Needs to make puns 24/7 🤣
-- Can dance 🕺 and play violin 🎻
-- Is a local guide on Google Maps 🍽
-- Red is the best colour. Change my mind 🙉
+- I like to travel ✈
+- I can't live without rice 🍚
+- I can speak 4 languages 💬
+- I get a haircut twice a year 💈
+- I need to make puns 24/7 🤣
+- I can dance 🕺 and play violin 🎻
+- I am a local guide on Google Maps 🍽
+- I think red is the best colour. Change my mind 🙉
