replace time-based generated pseudo-random number by sample filter

--- a/_data/quotes.yml
+++ b/_data/quotes.yml
@@ -538,3 +538,6 @@
 - quote: |
     Beauty is when you can appreciate yourself. When you love yourself, that’s when you’re most beautiful.
   author: Zoe Kravitz
+- quote: |
+    Rowing harder doesn't help if the boat is headed in the wrong direction.
+  author: Kenichi Ohmae
