change articles list and update about page

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,8 +1,9 @@
-- I like to travel ✈
-- I can't live without rice 🍚
+- I dance 🕺
+- I play violin 🎻
+- I have a cat 😸
 - I can speak 4 languages 💬
-- I get a haircut twice a year 💈
-- I need to make puns 24/7 🤣
-- I can dance 🕺 and play violin 🎻
+- I am an anime connoisseur 🧐
+- I am addicted to making puns 🤣
 - I am a local guide on Google Maps 🍽
-- I think red is the best colour. Change my mind 🙉
+- My favourite food is rice 🍚
+- My favourite colour is red 🟥
