--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ social_links:
 canvas:
   home: Welcome
   articles: What's new?
-  resume: Find Out More
+  resume: My Experiences and Projects
   about: My Passions & Interests
 
 # Exclude from processing
