--- a/_data/quotes.yml
+++ b/_data/quotes.yml
@@ -194,6 +194,9 @@
     Throughout life people will make you mad, disrespect you and treat you bad. Let God deal with the things they do, cause hate in your heart will consume you too.
   author: Will Smith
 - quote: |
+    If you know the enemy and know yourself, you need not fear the result of a hundred battles. If you know yourself but not the enemy, for every victory gained you will also suffer a defeat.
+  author: Sun Tzu, “The Art Of War”
+- quote: |
     I have learned to seek my happiness by limiting my desires, rather than in attempting to satisfy them.
   author: John Stuart Mill
 - quote: |
