fix css styling

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Yu-Yueh Liu
+title: UAce
 permalink: pretty
 description: Yueh's personal website created with Jekyll and hosted on GitHub. It uses HTML5, SASS, Bootstrap 4, JavaScript and JQuery.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -66,8 +66,8 @@ social_links:
 
 # canvas titles
 canvas:
-  home: Welcome
-  articles: What's new?
+  home: Welcome!
+  articles: What's New?
   resume: My Experiences & Projects
   about: My Passions & Interests
 
