--- a/_data/about.yml
+++ b/_data/about.yml
@@ -2,8 +2,8 @@
 - I play violin 🎻
 - I have a cat 😸
 - I can speak 4 languages 💬
+- I cannot stop making puns 🤣
 - I am an anime connoisseur 🧐
-- I am addicted to making puns 🤣
 - I am a local guide on Google Maps 🍽
 - My favourite food is rice 🍚
 - My favourite colour is red 🟥
