--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,3 +2,5 @@
 - <a href="https://www.youtube.com/watch?v=XvR-kTUad6U" target="_blank">Plus Ultra</a>
 - <a href="feed.xml" data-proofer-ignore>RSS <i class="fas fa-rss"></i></a>
 - <a href="sitemap.xml" data-proofer-ignore>Sitemap</a>
+- <a href='https://ko-fi.com/U7U43SBW4' target='_blank'><img height='36' style='border:0px;height:36px;'
+  src='https://cdn.ko-fi.com/cdn/kofi5.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
