--- a/_data/quotes.yml
+++ b/_data/quotes.yml
@@ -14,6 +14,9 @@
     Money and success don’t change people; they merely amplify what is already there.
   author: Will Smith
 - quote: |
+    Real flex is silent.
+  author: Patrick Lai
+- quote: |
     Not how long, but how well you have lived is the main thing.
   author: Seneca
 - quote: |
