--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,9 +1,9 @@
 - I dance 🕺
 - I play violin 🎻
 - I have a cat 😸
-- I can speak 4 languages 💬
-- I cannot stop making puns 🤣
+- I speak 4 languages 💬
+- I love rice 🍚
+- I love making puns 🤣
+- I love the color red 🟥
 - I am an anime connoisseur 🧐
 - I am a local guide on Google Maps 🍽
-- My favourite food is rice 🍚
-- My favourite colour is red 🟥
