Update work experiences

--- a/_data/work_experiences.yml
+++ b/_data/work_experiences.yml
@@ -1,3 +1,10 @@
+- title: Backend Developer
+  company: Mercantile Financial Technologies Inc.
+  image: company/mercantile-logo.png
+  url: https://www.getmercantile.com/
+  location: Montreal, CA
+  period: July 2021 – Present
+  description: Successfully delivered the MVP and implemented an identity decisioning service. Integrated the system with third-party SDKs for check issuing, credit reporting, and accounting services. Actively participated in design meetings and develop new features.
 - title: Full Stack Developer
   company: Ormuco Inc.
   image: company/ormuco-logo.png
