--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: jeffreytse/jekyll-deploy-action@v0.4.0
         with:
           provider: "github"
-          token: ${{ secrets.TOKEN }} # It's your Personal Access Token(PAT)
+          token: ${{ secrets.GITHUB_TOKEN }} # It's your Personal Access Token(PAT)
           repository: "" # Default is current repository
           branch: "sources" # Default is gh-pages for github provider
           jekyll_src: "./site" # Default is root directory
